# http-server

./: .gitignore  .gitmodules  CMakeLists.txt  config.conf
.github/workflows/: cmake-multi-platform.yml
src/: async.cpp  async.hpp  config.cpp  config.hpp  main.cpp  server.cpp  server.hpp  socket.cpp  socket.hpp  test.cpp  utils.cpp  utils.hpp
test/: get.http  index.html
